--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,37 @@ code {
 Button:hover {
   opacity: 0.7 !important;
 }
+.flex-col {
+  flex-direction: column !important;
+}
+
+.login {
+  background: #002b80 !important;
+  position: relative;
+}
+.login-btn {
+  min-width: 100%;
+  background: white !important;
+  color: black !important;
+  border: none !important;
+}
+.login-btn:hover {
+  min-width: 100%;
+  background: white !important;
+  color: blue !important;
+  border: 1px solid black !important;
+}
+.create-an-account {
+  position: absolute;
+  bottom: 20px;
+}
+.email, .password, .login-btn {
+  min-height: 50px !important;
+  border-bottom-left-radius: 30px;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
+.signup {
+  background: #002b80 !important;
+}
