--- a/src/index.css
+++ b/src/index.css
@@ -141,3 +141,8 @@ Button:hover {
   display: flex;
   align-content: center;
 }
+
+.clients-count, .advocates, .projects {
+  min-height: 150px;
+  min-width: 200px;
+}
