--- a/src/index.css
+++ b/src/index.css
@@ -187,3 +187,12 @@ Button:hover {
 .z-index-ten {
   z-index: 10;
 }
+.advanced-input-wrapper {
+  background: white;
+  border: none;
+}
+.bill-form-input {
+  border: none !important;
+  min-height: 30px !important;
+  border-radius: none !important;
+}
