--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
 Button:hover {
   opacity: 0.7 !important;
 }
+
 .flex-col {
   flex-direction: column !important;
 }
@@ -23,33 +25,42 @@ Button:hover {
   background: #002b80 !important;
   position: relative;
 }
+
 .login-btn {
   min-width: 100%;
   background: white !important;
   color: black !important;
   border: none !important;
 }
+
 .login-btn:hover {
   min-width: 100%;
   background: white !important;
   color: blue !important;
   border: 1px solid black !important;
 }
+
 .create-an-account {
   position: absolute;
   bottom: 20px;
 }
-.email, .password, .login-btn {
+
+.email,
+.password,
+.login-btn {
   min-height: 50px !important;
   border-bottom-left-radius: 30px;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
 }
-.blue, .signup {
+
+.blue,
+.signup {
   background: #002b80 !important;
 
 }
+
 .btn-outline {
   position: relative;
   border: none !important;
@@ -61,46 +72,57 @@ Button:hover {
   border-top-right-radius: 30px !important;
   border-bottom-right-radius: 30px !important;
 }
+
 .dashboard-icons {
   position: absolute;
   left: 40px;
 }
+
 .btn:hover {
   opacity: 0.9 !important;
 }
+
 .biller-wrapper {
   min-height: 90vh !important;
 }
+
 .bill-input {
   border: none !important;
   border-radius: none !important;
   min-height: 40px;
 }
+
 .bill-sm-input {
   border: none !important;
   border-radius: none !important;
   min-height: 25px;
 }
+
 .bill-btn {
   border: none !important;
   background: white;
   border-radius: 0 !important;
 }
+
 .rental {
   min-height: 85vh;
 }
+
 .cancel:hover {
   color: red;
   opacity: 1 !important;
 }
+
 .next:hover {
-  color:green;
+  color: green;
   opacity: 1 !important;
 }
+
 .submit:hover {
   background: green;
   color: white;
 }
+
 .front-btn:hover {
   color: white;
   background: blue !important;
@@ -110,51 +132,65 @@ Button:hover {
   color: white;
   background: red !important;
 }
-.bill-reset-btn{
+
+.bill-reset-btn {
   border: none !important;
   background: white;
   border-radius: 0 !important;
 }
+
 .bill-reset-btn:hover {
   color: white;
   background: red !important;
 }
+
 .full-height {
   min-height: 90vh;
 }
-.logout, .logout-cursor {
+
+.logout,
+.logout-cursor {
   cursor: not-allowed;
 }
+
 .logout {
   display: flex;
   justify-content: center;
   align-items: center;
   align-content: center;
 }
+
 .clientScreen {
-  background: #E5E5E5 !important; 
+  background: #E5E5E5 !important;
 }
+
 .bill-sm-label {
   font-size: 90%;
 }
+
 .align-content-center {
   display: flex;
   align-content: center;
 }
 
-.clients-count, .advocates, .projects {
+.clients-count,
+.advocates,
+.projects {
   min-height: 150px;
   min-width: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.delete-btn, .delete-btn-client {
+
+.delete-btn,
+.delete-btn-client {
   font-size: 130%;
   margin: 5px;
   padding: 2px;
   border-radius: 5px;
 }
+
 .delete-btn:hover {
   color: white !important;
   background: red !important;
@@ -162,6 +198,7 @@ Button:hover {
   padding: 2px;
   border-radius: 5px;
 }
+
 .delete-btn-client:hover {
   color: white !important;
   background: red !important;
@@ -175,9 +212,10 @@ Button:hover {
   color: white !important;
   background: blue !important;
   padding: 2px;
-  margin: 5px; 
+  margin: 5px;
   border-radius: 5px;
 }
+
 .update-link-client:hover {
   color: white !important;
   background: blue !important;
@@ -185,56 +223,70 @@ Button:hover {
   margin: 5px;
   border-radius: 5px;
 }
-.update-link, .update-link-client {
+
+.update-link,
+.update-link-client {
   font-size: 130%;
   color: blue !important;
-  padding:2px;
-  margin: 5px; 
+  padding: 2px;
+  margin: 5px;
   border-radius: 5px;
 }
+
 .forty-height {
   min-height: calc(100vh - 40vh);
 }
+
 .two-times {
   font-size: 140%;
 }
+
 .z-index-ten {
   z-index: 10;
 }
+
 .advanced-input-wrapper {
   background: white;
   border: none;
 }
+
 .bill-form-input {
   border: none !important;
   min-height: 30px !important;
   border-radius: none !important;
 }
+
 .rounded-mid {
   border-bottom-left-radius: 20px !important;
   border-bottom-right-radius: 20px !important;
   border-top-right-radius: 20px !important;
   border-top-left-radius: 20px !important;
 }
+
 .rounded-mid:hover {
   color: blue;
   opacity: 0.9;
 }
+
 .nav-icon {
   font-size: 120%;
   font-weight: bold;
 }
+
 .cursor-pointer {
   cursor: pointer;
 }
+
 .circle {
   border-radius: 50%;
 }
+
 .user-icon-wrapper {
   height: 35px;
   width: 35px;
   background: black;
 }
+
 .create-client {
   border: none;
   border-bottom-left-radius: 11px !important;
@@ -242,12 +294,14 @@ Button:hover {
   border-top-right-radius: 11px !important;
   border-top-left-radius: 11px !important;
 }
+
 .create-client:hover {
   border: none;
   color: blue !important;
   background: white !important;
   opacity: 1 !important;
 }
+
 .report-divs {
   min-height: 150px;
   min-width: 175px;
@@ -257,27 +311,36 @@ Button:hover {
   align-items: center;
   cursor: pointer;
 }
+
 .report-divs:hover {
   border: 2px solid #002b80 !important;
   color: #002b80 !important;
 }
+
 .search-client-input {
   border: none !important;
   border-radius: 15px !important;
   max-height: 45px !important;
 }
+
 .search-client-input::focus {
   border: none !important;
   border-radius: 15px !important;
 }
+
 .light-color {
   background: #C4C4C4;
 }
-.clients-table, .bills-table, .advocates-table, .projects-table {
+
+.clients-table,
+.bills-table,
+.advocates-table,
+.projects-table {
   min-height: calc(100vh - 200px);
 }
+
 .add-schedule-icon {
-  font-weight:800;
+  font-weight: 800;
   padding: 2px;
   margin: 5px;
   border-radius: 5px;
@@ -289,4 +352,8 @@ Button:hover {
   padding: 2px;
   margin: 5px;
   border-radius: 5px;
+}
+
+.full-screen {
+  height: 100vh;
 }
