--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 body {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -11,10 +13,6 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-Button:hover {
-  opacity: 0.7 !important;
 }
 
 .flex-col {
@@ -131,17 +129,33 @@ Button:hover {
 .front-back-btn:hover {
   color: white;
   background: red !important;
+  cursor: pointer;
 }
 
-.bill-reset-btn {
-  border: none !important;
+.reset-btn {
+  border: 1px solid rgb(255, 0, 0) !important;
   background: white;
+  color: red !important;
+  border-radius: 0 !important;
+}
+.reset-btn:hover {
+  color: white !important;
+  background: red !important;
+}
+input:focus {
+  border: none !important;
+}
+
+.submit-btn {
+  border: 1px solid rgb(0, 0, 255) !important;
+  background: white;
+  color: blue !important;
   border-radius: 0 !important;
 }
 
-.bill-reset-btn:hover {
-  color: white;
-  background: red !important;
+.submit-btn:hover {
+  color: white !important;
+  background: blue !important;
 }
 
 .full-height {
